# Soul-FL-Artifact

./: README.md
Soul-FL-Artifact/: README.md  config.py  conftest.py  data_loader.py  hardhat.config.js  package.json  pyproject.toml  requirements.txt  run_simulation.py
Soul-FL-Artifact/contracts/: SoulFLToken.sol
Soul-FL-Artifact/core/: __init__.py  aggregation.py  client.py  models.py  server.py
Soul-FL-Artifact/scripts/: deploy_and_test.js
Soul-FL-Artifact/security/: __init__.py  blockchain_sim.py  cvae.py  trust_engine.py  zk.py
Soul-FL-Artifact/tests/: test_integration.py  test_soul_fl.py
Soul-FL-Artifact/utils/: __init__.py  metrics.py  plotting.py
