[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "soul-fl"
version = "1.0.0"
description = "Soul-FL: Mitigating Sleeper Sybil Attacks in Federated Learning via Statistically Anchored Identities and Decaying Trust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Md Mamunur Rashid",  email = "md.m.rashid@deakin.edu.au" },
    { name = "Md Palash Uddin",    email = "m.uddin@deakin.edu.au" },
    { name = "Yong Xiang",         email = "yong.xiang@deakin.edu.au" },
    { name = "Keshav Sood",        email = "keshav.sood@deakin.edu.au" },
    { name = "Shui Yu",            email = "Shui.Yu@uts.edu.au" },
    { name = "Longxiang Gao",      email = "gaolx@sdas.org" },
]
keywords = [
    "federated learning", "sybil attacks", "trust decay",
    "zero-knowledge proofs", "soulbound tokens", "adversarial machine learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
plot  = ["matplotlib>=3.8.0"]
track = ["wandb>=0.16.0"]
dev   = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "black>=23.0", "ruff>=0.1.0"]
all   = ["soul-fl[plot,track,dev]"]

[project.scripts]
soul-fl = "run_simulation:main"
soul-fl-theory = "utils.theoretical_analysis:print_full_report"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "security*", "utils*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
markers   = [
    "slow: tests that require GPU or large datasets",
    "torch: tests that require PyTorch",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
